Application Page Done

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV=testing
 BASE_URL=https://ownersearch.blockqueue.dev
-API_URL = https://google.com
+API_URL = https://graphql.org/
 HASH_SECRET=
